# papers-please

./: Cargo.toml
examples/snake-bachelor/: main.pp  main.ppd  references.pp  references.ppd
examples/snake-bachelor/chapters/: introduction.ppc
src/: main.rs  parse.rs
