[package]
name = "papers-please"
version = "0.1.0"
authors = ["johannesvollmer <johannes.boenki@t-online.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.110", features = ["derive"] }
futures = "0.3.5"
nom-bibtex = "0.2.0"
